# mpc-uniqueness-check

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  LICENSE  LICENSE-APACHE  README.md  SECURITY.md  compose.yml  compose_all_sides.yml  deny.toml  rust-toolchain.toml  rustfmt.toml
.cargo/: audit.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml  e2e.yml  update-deployment.yaml
benches/: example.rs  rotation_comparison.rs
config/: coordinator.toml  docker_coordinator.toml  docker_participant.toml  participant.toml
docs/: specification.ipynb
example-data/: rotations_bit_patterns.txt
init-scripts/ready.d/: create_sqs_queue.sh
migrations/: 001_init.sql
migrations/coordinator/: 001_init.sql
migrations/participant/: 001_init.sql
src/: bits.rs  config.rs  coordinator.rs  db.rs  db_syncer.rs  debug_encoding.rs  distance.rs  encode.rs  encoded_bits.rs  error.rs  gateway.rs  hamming.rs  health_check.rs  iris.rs  iris_db.rs  item_kind.rs  lib.rs  participant.rs  rng_source.rs  slice_utils.rs  snapshot.rs  template.rs  utils.rs
src/arch/: generic.rs  mod.rs  neon.rs  reference.rs
src/bits/: all_bit_patterns_test.rs  all_rotations.txt
src/config/: json_wrapper.rs
src/db/: coordinator.rs  impls.rs  kinds.rs  participant.rs
src/db_syncer/: aws.rs
src/gateway/: aws.rs  http.rs
src/utils/: aws.rs  hex.rs  tasks.rs  templating.rs
tests/: common.rs  e2e.rs  e2e_config.toml  e2e_sequence.json  mod.rs  multi_match_e2e_sequence.json  multi_match_truncated_e2e_sequence.json  regular_e2e_scenario.json
tests/bilateral_signup_sequence/: bilateral_signup_sequence.toml  mod.rs
tests/e2e/bilateral_signup_sequence/: README.md
tests/e2e/simple_signup_sequence/: simple_signup_sequence.rs
tests/simple_signup_sequence/: README.md  mod.rs  simple_signup_sequence.toml
