[package]
name = "mpc"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.1.4"
aws-sdk-sqs = "1.12.0"
bytemuck = { version = "1.14.1", features = ["derive"] }
clap = { version = "4.4.18", features = ["derive", "env"] }
config = "0.13.4"
criterion = "0.5.1"
dotenv = "0.15.0"
eyre = "0.6.11"
futures = "0.3.30"
hex = { version = "0.4.3", features = ["serde"] }
itertools = "0.12.0"
memmap = "0.7.0"
metrics = "0.21.1"
rand = "0.8.5"
rayon = "1.8.1"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
sqlx = { version = "0.7.3", features = [
    "runtime-tokio-native-tls",
    "any",
    "postgres",
    "chrono",
] }
docker-db = { git = "https://github.com/Dzejkop/docker-db", rev = "ef9a4dfccd9cb9b4babeebfea0ba815e36afbafe" }
telemetry-batteries = { git = "https://github.com/worldcoin/telemetry-batteries.git", rev = "c6816624415ae194da5203a5161621a9e10ad3b0" }
tokio = { version = "1.35.1", features = ["macros"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
ordered-float = "4.2.0"

[dev-dependencies]
float_eq = "1.0.1"
proptest = "1.4.0"

[[bin]]
name = "mpc-participant"
path = "bin/mpc_participant.rs"

[[bin]]
name = "mpc-coordinator"
path = "bin/mpc_coordinator.rs"

[[bench]]
name = "example"
harness = false

