[package]
name = "mpc"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.77"
aws-config = "1.1.4"
aws-sdk-sqs = "1.12.0"
axum = "0.7.4"
base64 = "0.21.7"
bitvec = "1"
bytemuck = { version = "1.14.1", features = ["derive"] }
clap = { version = "4.4.18", features = ["derive", "env"] }
config = "0.14.0"
criterion = "0.5.1"
dotenv = "0.15.0"
eyre = "0.6.12"
futures = "0.3.30"
hex = { version = "0.4.3", features = ["serde"] }
indicatif = "0.17.7"
indoc = "2.0.4"
itertools = "0.12.0"
metrics = "0.21.1"
# TODO: only include this for migrate-codes bin
mongodb = "2.8.1"
ordered-float = "4.2.0"
rand = "0.8.5"
rayon = "1.8.1"
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
sqlx = { version = "0.7.3", features = [
    "runtime-tokio-native-tls",
    "any",
    "postgres",
    "chrono",
] }
telemetry-batteries = { git = "https://github.com/worldcoin/telemetry-batteries.git", rev = "e0891328b29d9f85df037633feccca2f74a291a6" }
tinytemplate = "1.2.1"
tokio = { version = "1.35.1", features = ["macros"] }
toml = "0.8.9"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
opentelemetry = "0.21.0"
url = "2.5.0"
humantime-serde = "1.1.1"

[dev-dependencies]
float_eq = "1.0.1"
proptest = "1.4.0"
similar-asserts = "1.5.0"
config = "0.14.0"
test-case = "3.3.1"
testcontainers = "0.15"
testcontainers-modules = { version = "0.3", features = [
    "postgres",
    "localstack",
] }

[[bin]]
name = "mpc-node"
path = "bin/mpc_node.rs"

[[bin]]
name = "utils"
path = "bin/utils/utils.rs"

[[bin]]
name = "migrate-codes"
path = "bin/migrate-codes/migrate.rs"

[[bench]]
name = "rotation_comparison"
harness = false

[profile.release]
panic = "abort"
